# image_cropping

./: main.py  pyproject.toml  test_local.py
core/: cropping.py  orientation.py  utils.py
