[project]
name = "anusha"
version = "0.1.0"
description = ""
authors = [
    {name = "vikas",email = "iamvkpandey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (==2.2.1)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
